--- a/MatrixModule_dialog_base.ui
+++ b/MatrixModule_dialog_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>604</width>
-    <height>365</height>
+    <width>839</width>
+    <height>526</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="button_box">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>330</y>
+     <x>470</x>
+     <y>480</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -34,7 +34,7 @@
     <rect>
      <x>20</x>
      <y>80</y>
-     <width>561</width>
+     <width>301</width>
      <height>31</height>
     </rect>
    </property>
@@ -46,12 +46,12 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>56</width>
-      <height>13</height>
+      <width>71</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>R</string>
+     <string>DEM Image</string>
     </property>
    </widget>
    <widget class="QTextEdit" name="inputL1">
@@ -59,9 +59,22 @@
      <rect>
       <x>90</x>
       <y>0</y>
-      <width>411</width>
+      <width>161</width>
       <height>31</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="b1">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>0</y>
+      <width>51</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
     </property>
    </widget>
   </widget>
@@ -70,7 +83,7 @@
     <rect>
      <x>20</x>
      <y>120</y>
-     <width>561</width>
+     <width>301</width>
      <height>31</height>
     </rect>
    </property>
@@ -82,18 +95,18 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>56</width>
-      <height>13</height>
+      <width>71</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>K</string>
+     <string>Use field image</string>
     </property>
    </widget>
    <widget class="QPushButton" name="b2">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>250</x>
       <y>0</y>
       <width>51</width>
       <height>32</height>
@@ -108,7 +121,7 @@
      <rect>
       <x>90</x>
       <y>0</y>
-      <width>411</width>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -119,7 +132,7 @@
     <rect>
      <x>20</x>
      <y>160</y>
-     <width>561</width>
+     <width>301</width>
      <height>31</height>
     </rect>
    </property>
@@ -142,7 +155,7 @@
    <widget class="QPushButton" name="b3">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>250</x>
       <y>0</y>
       <width>51</width>
       <height>32</height>
@@ -157,7 +170,7 @@
      <rect>
       <x>90</x>
       <y>0</y>
-      <width>411</width>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -168,7 +181,7 @@
     <rect>
      <x>20</x>
      <y>200</y>
-     <width>561</width>
+     <width>301</width>
      <height>31</height>
     </rect>
    </property>
@@ -191,7 +204,7 @@
    <widget class="QPushButton" name="b4">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>250</x>
       <y>0</y>
       <width>51</width>
       <height>32</height>
@@ -206,7 +219,7 @@
      <rect>
       <x>90</x>
       <y>0</y>
-      <width>411</width>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -217,7 +230,7 @@
     <rect>
      <x>20</x>
      <y>240</y>
-     <width>561</width>
+     <width>301</width>
      <height>31</height>
     </rect>
    </property>
@@ -240,7 +253,7 @@
    <widget class="QPushButton" name="b5">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>250</x>
       <y>0</y>
       <width>51</width>
       <height>32</height>
@@ -255,7 +268,7 @@
      <rect>
       <x>90</x>
       <y>0</y>
-      <width>411</width>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -266,7 +279,7 @@
     <rect>
      <x>20</x>
      <y>280</y>
-     <width>561</width>
+     <width>301</width>
      <height>31</height>
     </rect>
    </property>
@@ -289,7 +302,7 @@
    <widget class="QPushButton" name="b6">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>250</x>
       <y>0</y>
       <width>51</width>
       <height>32</height>
@@ -304,24 +317,11 @@
      <rect>
       <x>90</x>
       <y>0</y>
-      <width>411</width>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
    </widget>
-  </widget>
-  <widget class="QPushButton" name="b1">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>80</y>
-     <width>51</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>...</string>
-   </property>
   </widget>
   <widget class="QLabel" name="label_7">
    <property name="geometry">
@@ -334,6 +334,19 @@
    </property>
    <property name="text">
     <string>A = R * K * L*S * C * P</string>
+   </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_7">
+   <property name="geometry">
+    <rect>
+     <x>349</x>
+     <y>69</y>
+     <width>131</width>
+     <height>131</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>GroupBox</string>
    </property>
   </widget>
  </widget>
